fix globalService observer and add spacing inside columns

--- a/assets/scss/components/_entry-content.scss
+++ b/assets/scss/components/_entry-content.scss
@@ -5,6 +5,11 @@
 .entry-content,
 [class*="__inner-container"] {
     @include wrapper;
+}
+
+.entry-content,
+.wp-block-column,
+[class*="__inner-container"] {
     @include space-children-y( var(--theme-spacing-small) );
 
 	// Larger spacing for specific blocks
